# static-x64-arm64-compiler

./: README.md  meson.build
static-translator/: analyzer.cc  analyzer.h  cpuid-emu.cc  elf-input.cc  elf-input.h  elf-output.cc  elf-output.h  main.cc  meson.build  obj-loader.cc  obj-loader.h  runtime.cc  runtime.h  syscall-emu.cc  translator.cc  translator.h
subprojects/frvdec/: frvdec.c  frvdec.h  meson.build  test.c
